Fixed flicker of background video on Safari.

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ video {
   -ms-transform: translateX(-50%) translateY(-50%);
   /* Opera and Safari */
   -webkit-transform: translateX(-50%) translateY(-50%);
+  /* Prevent flicker of video on Safari */
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
 }
 
 /* Created classes*/
